@@ -1,5 +1,8 @@
+require 'fileutils'
+
 module Ritual
   autoload :Changelog, 'ritual/changelog'
+  autoload :Extension, 'ritual/extension'
   autoload :VersionFile, 'ritual/version_file'
   autoload :VERSION, 'ritual/version'
 end
