@@ -1,3 +1,7 @@
+== LATEST
+
+ * Extension support.
+
 == 0.1.1 2011-01-21
 
  * Support custom code in version file. Only the "VERSION =" line is
